# election-aggregation

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: mdbook.yml
docs/: book.toml
docs/src/: SUMMARY.md  introduction.md
docs/src/appendix/: changelog.md  glossary.md  nickname-dictionary.md  nist-alignment.md  office-classification.md  references.md
docs/src/architecture/: embeddings-composites.md  embeddings-model.md  l0-raw.md  l1-cleaned.md  l2-embedded.md  l3-matched.md  l4-canonical.md  llm-budget.md  llm-when.md  no-data-storage.md  ordering.md  pipeline-overview.md  principles.md  provenance.md
docs/src/hard-problems/: contest-disambiguation.md  cross-source.md  entity-cascade.md  entity-resolution.md  entity-test-cases.md  entity-thresholds.md  name-normalization.md  names-dictionary.md  names-nicknames-and-middles.md  names-suffixes.md  non-candidates-ballot-measures.md  non-candidates-metadata.md  non-candidates.md  office-classification.md  office-four-tiers.md
docs/src/problem/: existing-landscape.md  questions-civictech.md  questions-government.md  questions-journalists.md  questions-researchers.md  questions.md  why-hard.md
docs/src/rust/: cli.md  output-formats.md  overview.md  pipeline-execution.md  source-parser-trait.md  type-system.md
docs/src/schema/: contest-kinds.md  enumerations.md  overview.md  (+1 more)
src/: lib.rs  main.rs
src/pipeline/: l0.rs  l1.rs  l2.rs  l3.rs  l4.rs  mod.rs
src/schema/: mod.rs
src/sources/: census.rs  clarity.rs  fec.rs  medsl.rs  mod.rs  ncsbe.rs  openelections.rs  vest.rs
(+27 files in other folders)
